<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListGuestActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/list_guest_button_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivanov_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivanova_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petrov_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/petrova_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sidorov_textview" />

    <TextView
        style="@style/Theme.My.Textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sidorova_textview" />

</LinearLayout>